--- a/index.html
+++ b/index.html
@@ -164,27 +164,11 @@
                 <div class="media align-items-center">
                     <img class="mr-md-3 media-image" src="img/sec_my_projects/katana.png" alt="Generic placeholder image" style="max-width: 200px;">
                     <div class="media-body">
-                        <div class="date_wrap">
-                            <div class="item">
-                                <span>Старт</span>
-                                <div class="date">
-                                    <span>июн</span>
-                                    <div>1</div>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <span>Финиш</span>
-                                <div class="date">
-                                    <span>июн</span>
-                                    <div>19</div>
-                                </div>
-                            </div>
-                        </div>
-                        <p class="card_subtitle">Он-лайн тренинг</p>
+                        <p class="card_subtitle">Онлайн тренинг</p>
                         <h4 class="card_title">Достижение Мечты</h4>
                         <div class="b-card-body">
                             <ul class="list">
-                                <li>Он-лайн марафон, на котором ты получишь четкие методики и стратегии, как найти свои сильные стороны, поставить четкие цели, достигать их и действовать даже тогда, когда лень и очень не хочется. </li>
+                                <li>Онлайн марафон, на котором ты получишь четкие методики и стратегии, как найти свои сильные стороны, поставить четкие цели, достигать их и действовать даже тогда, когда лень и очень не хочется. </li>
                                 <li>Ты узнаешь где брать энергию и Силы, как открыть внутренние резервы. Как преодолевать сложности и вызовы и, при этом, получать от этого удовольствие.</li>
                                 <li>Ты узнаешь как достигать результата и жить насыщенной жизнью.</li>
                                 <li>Сделай шаг в свою энергичную и наполненную жизнь!</li>
@@ -211,69 +195,15 @@
                         <p class="card_subtitle">Живое 2-х дневное мероприятие</p>
                         <h4 class="card_title">Денежное мышление</h4>
                         <div class="b-card-body">
-                            <p><b>Двухдневный тренинг от основателя Катана Груп (входит в ТОП-5 самых результативных бизнес тренеров мира по рейтингу Бизнес-Молодости)
-                                ДЕНЕЖНОЕ МЫШЛЕНИЕ</b><br>
-                                Запрограммируй себя на  приумножение дохода </p>
-                              <p>  <b>БОЛЬШИНСТВО ЛЮДЕЙ</b>  СТАЛКИВАЕТСЯ КАК МИНИМУМ  С ОДНОЙ ИЗ <b>ЭТИХ ПРОБЛЕМ</b> <br>
-                                <ol>
-                                  <li>Ты неуверенно чувствуешь себя в кругу обеспеченных и успешных людей</li>
-                                  <li>Каждый раз запуск нового проекта закачивается провалом: кажется, что деньги ускользают от тебя</li>
-                                  <li>Сложно найти золотую середину: ты либо слишком экономишь, либо тратишь средства на ненужные вещи</li>
-                                  <li>Зарабатываешь больше — и увеличивается количество трат: еле хватает к концу месяца</li>
-                                  <li>Ты упираешься в финансовой потолок: вроде зарабатываешь, но не можешь выйти на новый уровень прибыли</li>
-                                  <li>Ты — фрилансер и не знаешь, как превратить навыки в прибыльный бизнес</li>
-                                  <li>Твои доходы зависят не от тебя: приходится надеяться на волю случая и прогибаться под обстоятельства.</li>
-                                  <li>Иногда кажется, что ты просто недостоин (-на) обеспеченной жизни.</li>
-                                </ol> </p>
-                              <p>  <b>“ДЕНЕЖНОЕ МЫШЛЕНИЕ” — ЭТО ДВУХДНЕВНЫЙ ИНТЕНСИВНЫЙ ТРЕНИНГ, ОБЪЕДИНЯЮЩИЙ НАУКУ УПРАВЛЕНИЯ ДЕНЬГАМИ И ПСИХОЛОГИЮ</b><br>
-                                Здесь не будет сухой теории, которой и так хватает на других практикумах. У нас нет на это времени. Ты не будешь думать, что внедрять, а что нет. На тренинге тебя ждет практическая проработка установок, которые стали камнем преткновения между тобой и успехом.
-                                Выйдя из зала, ты уже получишь результат </p>
-
-                                <p>ДЛЯ КОГО?</p>
-
-                              <p>  ДЛЯ ПРЕДПРИНИМАТЕЛЕЙ<br>
-                                которые уперлись в потолок и не могут выйти на новый уровень дохода. Их тормозят вредные привычки, сомнительные друзья, неуверенность и еще что-то, чего они не могут понять.
-                                Все попытки зарабатывать больше — проваливаются. </p>
-
-                              <p>  ДЛЯ ФРИЛАНСЕРОВ<br>
-                                не желающих повторить судьбу своих родителей.
-                                Они хотят стать авторами жизни, купить жилье (не в ипотеку), авто (не в кредит), ездить на отдых и даже не задумываться над тем, хватит им на это денег или нет. </p>
-                                ЧТО ТЫ <b>ПОЛУЧИШЬ</b> ПОСЛЕ ТРЕНИНГА
-                                <ol>
-                                  <li>Определишь и проработаешь внутренние психологические ограничения, программирующие тебя на бедность.</li>
-                                  <li>Избавишься от “синдрома беспомощности” и научишься решать финансовые проблемы любой сложности.</li>
-                                  <li>Изменишь мышление бедного и несчастного человека на мышление богатого и счастливого человека.</li>
-                                  <li>Поймёшь причины, из-за которых ты до сих пор не богат — и узнаешь, как их устранить.</li>
-                                  <li>Запрограммируешь сценарий своей идеальной жизни через пирамиду Дилтса</li>
-                                  <li>Освоишь методику GROW — ведущий мировой инструмент достижения целей.</li>
-                                  <li>Узнаешь лайфхаки по увеличению дохода от участников.</li>
-                                  <li>Получишь реальный результат, выполняя практические упражнения.</li>
-                                </ol>
-
-                                <p><b>ПРОГРАММА</b> МЕРОПРИЯТИЯ</p>
-                                <p>  ДЕНЬ<br>
-                                  1<br>
-                                  - Почему наше окружение решает, сколько мы заработаем.<br>
-                                  - Как научиться не только правильно ставить, но и правильно достигать финансовых целей.<br>
-                                  - Мышление “богатого” и “бедного”: как отличить. Типы денежных сценариев: определяем твой.<br>
-                                  - Поиск и устранение внутренних запретов и ограничений.<br>
-                                  - Сила прошлого: как перестать плыть по течению и создать идеальное будущее.<br>
-                                  - Сила духа: как преодолевать препятствия и вызовы.<br>
-                                  - Стратегии достижения результата в знакомых и незнакомых нишах
-                                </p>
-                              <p>ДЕНЬ<br>
-                              2<br>
-                               - Получать или отдавать: жизненная философия богатых людей.<br>
-                               - Энергия намерения или как материализовать свои мысли о финансовой свободе.<br>
-                               - Правильная система распределения денег.<br>
-                               - Построение денежных убеждений, которые помогут тебе видеть скрытые возможности.<br>
-                               - Типы денежного мышления: какое у тебя.<br>
-                               - Лидерство, внутренняя сила и деньги.<br>
-                               - Практика на борьбу со страхом.<br>
-                               - Практические кейсы по старту и развитию своего бизнеса.<br>
-                               - Позитив: как настроиться на энергию достижения и побеждать всегда и во всем.</p>
-
-                            </p>
+                          <ul class="list">
+                            <li>2-х дневное живое мероприятие, которое посвящено особенностям нашего мышления.</li>
+                            <li>Глубоко прорабатывается понятие денежной цели и прикладные механики ее достижения.</li>
+                            <li>За время тренинга, погрузимся в наше подсознание, уберем запреты и ограничения, которые мешают нам мыслить масштабно.</li>
+                            <li>Узнаем принципы достижения цели и какие действия дадут максимальный результат за короткий промежуток времени.</li>
+                            <li>Узнаем где брать энергию, как преодолевать вызовы и как жить на полную.</li>
+                            <li>Получим заряд бодрости и позитива. Заведем много новых, интересных знакомств. Прокачаем внутреннюю Силу для больших свершений!</li>
+                            <li>Регистрируйся и до встречи!</li>
+                          </ul>
                         </div>
                         <div class="dropdown-divider"></div>
                         <div class="b-card-footer">
@@ -296,101 +226,16 @@
                         <p class="card_subtitle">офлайн/онлайн</p>
                         <h4 class="card_title">Бизнес Разборы</h4>
                         <div class="b-card-body">
-                          <p>4-недельный практический интенсив от Katana Group и Виталия Бихунова
-                          БИЗНЕС-РАЗБОРЫ
-                          КРАТНОЕ УВЕЛИЧЕНИЕ ДОХОДА ПОД НАСТАВНИЧЕСТВОМ БИЗНЕС-ТРЕНЕРОВ</p>
-                          <p>
-                          <p>СЕРТИФИЦИРОВАННЫЕ ТРЕНЕРА KATANA GROUP
-                          ПОМОГЛИ УЖЕ СВЫШЕ
-                          200+
-                          ПРЕДПРИНИМАТЕЛЯМ
-                          И ФРИЛАНСЕРАМ
-                          КАК ЭТО
-                          ПРОИСХОДИТ</p>
-                          <p>Шаг 01<br>
-                          Ты ставишь амбициозную финансовую цель на 1 месяц (к примеру, удвоить доход или запустить бизнес)</p>
-                          <p>Шаг 02<br>
-                          Получаешь детальный разбор твоего бизнеса (или бизнес-идеи) на первой живой встрече с тренерами.</p>
-                          <p>Шаг 03<br>
-                          Тестируешь стратегии, гипотезы, быстро избавляясь от неэффективных и грамотно развивая самые перспективные</p>
-                          <p>Шаг 04<br>
-                          Отчитываешься о результатах на еженедельных живых встречах группы — и получаешь рекомандации от тренеров и коллег по обучению.</p>
-                          <p>Шаг 05<br>
-                          Находишься в постоянной коммуникации с тренером, отправляя ему ежедневные отчеты и получая от него персональную обратную связь.</p>
-                          <p>Шаг 06<br>
-                          Ежедневно улучшаешь финансовые показатели — и</p>
-
-                          ДОСТИГАЕШЬ ПОСТАВЛЕННОЙ ЦЕЛИ ЧЕРЕЗ 1 МЕСЯЦ!</p> </p>
-
-                          <p>
-                          ДЛЯ КОГО СОЗДАН <b>ЭТОТ ИНТЕНСИВ</b>
-                          <ul type="none">
-                            <li>Бизнес не приносит стабильного дохода: один месяц ты в плюсе, а второй в минусе.</li>
-                            <li>Вынашиваешь бизнес-идею, но из-за высоких рисков и отсутствия опыта не решаешься воплотить её в жизнь.</li>
-                            <li>Имеешь регулярный доход, но все попытки брать новые вершины и удвоить его, тщетны.</li>
-                            <li>Тестируешь сотни гипотез, которые теоретически могут сделать тебя богаче, но безрезультатно.</li>
-                            <li>Из-за постоянных операционных “пожаров” нет времени задумываться о масштабировании</li>
-                            <li>Постепенно теряешь мотивацию, когда твои друзья зарабатывают больше и больше, а у тебя не получается.</li>
-                            <li>Хочешь обрести финансовую свободу, чтобы не считать деньги и проводить больше времени с близкими.</li>
-                            <li>Постоянно слышишь от знакомых: “Не рискуй. Радуйся тому, что есть”.</li>
-                            <li>Чувствуешь, что можешь намного больше, но понятие не имеешь, как этого “большего” достичь.</li>
+                          <ul class="list">
+                            <li>Бизнес Разборы - прикладная программа по увеличению твоей прибыли.</li>
+                            <li>Более 70% участников удваивают свою прибыль уже в первый месяц прохождения.</li>
+                            <li>Непосредственная работа с бизнес наставником.</li>
+                            <li>Никакой теории, только конкретные действия внутри твоего бизнеса.</li>
+                            <li>Используются принципы и стратегии, которые показали мощный результат у сотен выпускников нашей программы.</li>
+                            <li>Бизнес Разборы - программа, которая, по словам участников, экономит годы жизни и позволяет избежать серьезных ошибок. Это короткая прямая от твоего исходного положения (т. А) до твоей денежной цели (т. Б).</li>
+                            <li>Воплоти свою бизнес идею или увеличь существующий бизнес прямо сейчас!</li>
+                            <li>Регистрируйся и до встречи!</li>
                           </ul>
-                        </p><p>
-                          ЧТО ТЕБЕ СТОИТ ЗНАТЬ
-                          <b>О БИЗНЕС-РАЗБОРАХ</b><br>
-                          НЕДЕЛИ<br>
-                          4<br>
-                          интенсивной работы над достижением цели<br>
-                          ЖИВЫХ
-                          ЗАНЯТИЙ<br>
-                          5<br>
-                          с тренерами курса по проработк твоих результатов<br>
-                          ДНЕЙ В
-                          НЕДЕЛЮ<br>
-                          7<br>
-                          интенсивной работы над достижением цели<br>
-                          2х <br>
-                          2-кратное умножение дохода на выходе<br>
-                          <b>БИЗНЕС-РАЗБОРЫ</b> — это 4-недельный интенсив для тех, кто устал ходить на
-                          бесконечные бизнес-тренинги и хочет просто поставить цель — и достичь её.
-                          В рамках интенсива тренеры создадут для тебя 3 условия, которые исключат
-                          возможность “недостижения” цели.
-                          <b>Первое условие</b> — ответственность за невыполнение заданий.
-                          <b>Второе условие</b> — система ежедневных отчетов и обратная связь от тренера.
-                          <b>Третье условие</b> — еженедельный подробный разбор твоих результатов тренером и его сертифицированными ассистентами
-                        </p>
-
-                          <p><b>КАК ПРОХОДЯТ</b>
-                          ЖИВЫЕ ЗАНЯТИЯ
-                          LIVE<br>
-                          Раз в неделю тебе предстоит встречаться с тренерами и коллегами по курсу в уютном ресторане Киева.
-                          Виталий Бихунов и команда аттестованных бизнес-тренеров будут отмечать твой прогресс и делиться советами для достижения финансовой цели.
-                          Более того: делиться рекомендациями с тобой будут другие участники интенсива. Таким образом, ты получишь ценный брейншторм с множеством вариантов решений.
-                          К их помощи ты можешь обращаться в любое время через закрытый Telegram-чат. </p>
-
-
-                          <p>ВАЖНО!
-                          ПОМИМО <b>УВЕЛИЧЕНИЯ ДОХОДА</b>,
-                          УЧАСТНИКИ ИНТЕНСИВА
-                          ПОЛУЧАЮТ <b>РЯД “ПОБОЧНЫХ
-                          ЭФФЕКТОВ”</b></p>
-                          <p>+1<br>
-                          Избавление от излишней импульсивности и медлительности в принятии решений</p>
-                          <p>+2<br>
-                          Способность контролировать бизнес-процессы (маркетинг, продажи, работа с клиентами, производство, управление персоналом и т.д.)</p>
-                          <p>+3<br>
-                          Обретение “нирваны” (долгожданной стабильности) в жизни, в работе и на банковском счету.</p>
-                          <p>+4<br>
-                          Создание работающей стратегии масштабирования и развития бизнеса</p>
-                          <p>+5<br>
-                          Умение отличать выгодные бизнес-возможности от невыгодных</p>
-                          <p>+6<br>
-                          Построение взаимовыгодной системы мотивации для команды: лучшие не уйдут, а ты не останешься в минусе.</p>
-                          <p>+7<br>
-                          Избавление от внутренних ограничений “я не смогу” и умение добиваться результатов в короткие сроки.</p>
-                          <p>+8<br>
-                          Способность сохранять и умножать результат в будущем самостоятельно, без поддержки тренеров.</p>
-
                         </div>
                         <div class="dropdown-divider"></div>
                         <div class="b-card-footer">
