--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                         <span>Элиезер Коган</span>
                                     </a>
                                 </td>
-                                <td class="expertise"></td>
+                                <td class="expertise">Бизнес, Маркетинг, Продажи, Стартапы</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>26</td>
