--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
                             <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
                             <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>  -->
-                            <a href="https://www.instagram.com/kate.lashkevich/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
+                            <a href="https://www.instagram.com/kate.lashkevich/" class="item"><img src="img/soc_links/inst.svg" width="25px" alt="in"></a>
                         </div>
                   <!--      <a href="#" class="btn btn-blue">История взлетов и падений</a>  -->
                     </div>
