--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><b>Салынова</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -68,15 +68,10 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Уже более 200 предпринимателей и руководителей прошли коучинговые и программы и  получили существенные результаты как в личностном развитии, так и в развитии своего дела, компании.</li>
                         </ul>
                     </div>
-                    <div class="works">
-                        <img src="img/sec_1/work_1.png" alt="">
-                        <img src="img/sec_1/work_2.png" alt="">
-                        <img src="img/sec_1/work_3.png" alt="">
-                    </div>
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/larisa.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -92,7 +87,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
-                        <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
+                        <div class="icon_avatar" style="background-image: url('img/sec_bio/larisa.jpg')"></div>
                         <h5>Лариса Салынова</h5>
                         <div class="soc_links_wrapp">
                             <a href="https://www.facebook.com/bizconsalting/" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
@@ -183,7 +178,7 @@
                 <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
                 <img alt="" class="abs_pic circle2" src="img/abs_pic/circle.svg">
                 <div class="media align-items-center">
-                    <div class="border-image" style="background-image: url('img/sec_bio/konstantin.jpg');">
+                    <div class="border-image" style="background-image: url('img/sec_bio/larisa.jpg');">
                     </div>
                     <div class="text">
                         <p class="text-title">Задай вопрос и я тебе обязательно отвечу</p>
@@ -457,7 +452,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 img_wrapp">
-                    <img src="img/sec_your_mentor/konstantin.png" alt="konstantin">
+                    <img src="img/sec_your_mentor/larisa.png" alt="larisa">
                 </div>
                 <div class="col-md-6">
                     <div class="embed-responsive embed-responsive-16by9">
