--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header  -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><b>Шустер</b></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -88,6 +88,7 @@
                             <a href="https://www.facebook.com/Воспитание-с-удовольствием-422104781923461" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="https://www.instagram.com/vospitanies" class="item"><img src="img/soc_links/inst.svg" width="25px" alt="inst"></a>
                             <a href="https://www.youtube.com/channel/UCJUsBIsP9daVL-hLdB1oqWQ" class="item"><img src="img/soc_links/yt.svg" width="25px" alt="yt"></a>
+                            <a href="https://t.me/vospitaniess" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
                         </div>
                     </div>
                 </div>
