--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -67,13 +67,10 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Счастливо женат. Отец 2 детей. </li>
                         </ul>
                     </div>
-                    <div class="works">
-                        <img src="img/sec_1/work_1.png" alt="">
-                    </div>
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/david.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -89,7 +86,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
-                        <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
+                        <div class="icon_avatar" style="background-image: url('img/sec_bio/david.jpg')"></div>
                         <h5>Давид Плискин</h5>
                         <div class="soc_links_wrapp justify-content-center">
                             <a href="https://www.facebook.com/biblecoa4ing/" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
@@ -152,7 +149,7 @@
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                    <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.jpg" alt="Generic placeholder image">
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <p class="card_subtitle">Коучинговое ведение</p>
                         <h4 class="card_title">Железная дисциплина</h4>
@@ -187,7 +184,7 @@
                 <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
                 <img alt="" class="abs_pic circle2" src="img/abs_pic/circle.svg">
                 <div class="media align-items-center">
-                    <div class="border-image" style="background-image: url('img/sec_bio/konstantin.jpg');">
+                    <div class="border-image" style="background-image: url('img/sec_bio/david.jpg');">
                     </div>
                     <div class="text">
                         <p class="text-title">Задай вопрос и я тебе обязательно отвечу</p>
@@ -284,16 +281,16 @@
                             <tr>
                                 <th scope="row">1</th>
                                 <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/vitaliy.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
+                                    <a href="https://p.smartexpert.net/social/mkp85kos" class="media">
+                                        <img src="img/sec_my_contacts/konstantin.jpg" alt="">
+                                        <span>Константин Михайленков</span>
                                     </a>
                                 </td>
                                 <td class="expertise">Бизнес, Маркетинг, Продажи, Стартапы</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>26</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/mkp85kos" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
@@ -312,44 +309,16 @@
                             <tr>
                                 <th scope="row">3</th>
                                 <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/vitaliy_d.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Управление, Менеджмент, командообразование</td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>54</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">4</th>
-                                <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/igor.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Маркетинг, личный бренд, ораторство, коучинг </td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>6</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">5</th>
-                                <td>
-                                    <a href="#" class="media">
+                                    <a href="https://p.smartexpert.net/social/YomtovShufotinski" class="media">
                                         <img src="img/sec_my_contacts/iomtov.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
+                                        <span>Йомтов Шуфотинский</span>
                                     </a>
                                 </td>
                                 <td class="expertise">Финансы, Доходы, Деньги, Состояние, Счастье</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>11</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/YomtovShufotinski" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -358,6 +327,8 @@
         </div>
     </section>
     <!-- / sec_my_contacts -->
+
+
     <section id="my_articles" class="sec sec_my_articles">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
@@ -461,79 +432,7 @@
             </div>
         </div>
     </section>
-    <!-- sec_my_articles -->
-  <!--  <section class="sec sec_latest_events">
-        <div class="container">
-            <div class="sec_title">
-                <img src="img/sec_latest_events/title_label.svg" alt="title_label">
-                <h2>Последние события</h2>
-            </div>
-            <div class="row justify-content-between">
-                <div class="col-md-6 card_wrapp">
-                    <div class="card">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <p>Рассказиваю откуда берется силы для достижения целей</p>
-                    </div>
-                </div>
-                <div class="col-md-6 card_wrapp">
-                    <div class="card">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <p>Все бизнесы рано или поздно достигают потолка роста, как его пробить?</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <!-- / sec_my_articles -->
-    <!-- sec_success_stories -->
-<!--    <section id="reviews" class="sec sec_success_stories">
-        <div class="container">
-            <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
-            <img alt="" class="abs_pic stone_orange_bottom" src="img/abs_pic/stone_orange.svg">
-            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
-            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
-            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
-            <div class="sec_title">
-                <img src="img/sec_my_contacts/title_label.svg" alt="title_label">
-                <h2>Истории успеха</h2>
-                <p>Что говорят о моих практикумах те, кто уже прошел обучение?</p>
-            </div>
-            <div class="row justify-content-between">
-                <div class="col-md-4 card_wrapp">
-                    <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                        <h3>Евгений Маташ</h3>
-                        <p>Менеджер по работе с партнерами</p>
-                        <i>“В нашей компании проходил тренинг “Позитивного Менеджмента”. Я поставил себе две цели - которые смог достичь! Оказалось, все мои ограничения были сокрыты в моем мышлении. Я смог его изменить, и освоив новые инструменты, у
-                            меня получилось быстро вырасти!”</i>
-                    </div>
-                </div>
-                <div class="col-md-4 card_wrapp">
-                    <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/vova.jpg');"></div>
-                        <h3>Владимир Сущенко</h3>
-                        <p>Проектный менеджер</p>
-                        <i>“Проходил обучение и продолжаю обучаться у Константина в “Акселератор Карьерного Роста: Практикум”. Методология позитивного менеджмента мне очень импонирует. Поначалу ее сложно внедрять, но спустя время, как команда
-                            привыкает к новым методикам - результаты кардинально меняются, в лучшую сторону. ”</i>
-                    </div>
-                </div>
-                <div class="col-md-4 card_wrapp">
-                    <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/vitaliy.jpg');"></div>
-                        <h3>Виталий Демьянец</h3>
-                        <p>Руководитель IT</p>
-                        <i>“Не могу сам поверить в происходящее. Всего 5 месяцев назад я только занял должность руководителя крупным IT-проектом. И вот сейчас я пишу этот отзыв на позиции Технического Директора. Программа Константина мне в этом очень
-                            помогла, и я здесь обрел не только инструментарий и развитие, но также хороших друзей и сильное окружение. ”</i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- / sec_success_stories -->
 
     <section id="me_mentor" class="sec sec_your_mentor">
         <div class="container">
@@ -547,7 +446,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 img_wrapp">
-                    <img src="img/sec_your_mentor/konstantin.png" alt="konstantin">
+                    <img src="img/sec_your_mentor/david.png" alt="david">
                 </div>
                 <div class="col-md-6">
                     <div class="embed-responsive embed-responsive-16by9">
@@ -559,46 +458,7 @@
         </div>
     </section>
 
-    <!-- sec_12 -->
-<!--    <section class="sec sec_12">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <h4>Контактная информация</h4>
 
-                    <table class="table table-borderless">
-                        <tr>
-                            <td>Телефон</td>
-                            <td><a href="tel:380968827050">+380 96 882 70 50</a></td>
-                        </tr>
-                        <tr>
-                            <td>Мейл</td>
-                            <td><a href="mailto:office@smartexpert.net">office@smartexpert.net</a></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-6">
-                    <div class="soc_links_wrapp mx-md-auto">
-                        <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <select class="form-control" id="lang">
-                            <option selected>Russian</option>
-                            <option>Ukraine</option>
-                            <option>Engish</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- / sec_12 -->
     <!-- footer -->
     <footer class="sec">
         <div class="container">
